dark mode bug fix

--- a/src/style/Contact.css
+++ b/src/style/Contact.css
@@ -3,7 +3,7 @@
 }
 
 .icon {
-    height: 3rem;
-    width: 3rem;
+    height: 2rem;
+    width: 2rem;
     margin: .5rem;
 }
